# AlmostHuman

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEBASE_REVIEW.md  Dockerfile  README.md  config.toml  docker-compose.yaml  messages.part.jsonl  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_conversation_engine.py  003_posture_column.py  004_message_reactions.py  005_user_dossier.py  006_pending_observations.py  007_drop_reply_distribution.py  008_drop_unused_ivfflat_indexes.py
api/: app.py  dependencies.py
conversation_engine/: MASTER_PROMPT.md  __init__.py  __main__.py  ai_client.py  bootstrap.py  config.py  context_builder.py  dossier.py  dossier_render.py  engagement_gate.py  enrichment.py  feedback_loop.py  handles.py  humanizer.py  memory_manager.py  observability.py  output_planner.py  persona_engine.py  prompts.py  scheduler.py  scheduler_support.py  sender.py  style_rewriter.py  suspicion_monitor.py  timing_classifier.py  validators.py  volume_governor.py  word_generator.py
core/: config.py  constants.py  logging.py  schemas.py  utils.py
deploy/vps/: .env.vps.example  README.md
docs/: telegram_group_speech_style_guide.md
ingestion/: event_handlers.py  main.py  telethon_client.py
models/: timing_classifier.json  timing_classifier_v2.json
pipeline/: queue_consumer.py  queue_producer.py  workers.py
scripts/: build_timing_dataset.py  healthcheck.py  timing_rate_monitor.py  timing_rate_report.py  train_timing_classifier.py  vps_full_flow_replay.py
storage/: database.py  postgres_models.py  repositories.py
test-ui/: INSTRUCTIONS.md  run.sh  runner.py  sample_chat.json  server.py
test-ui/static/: app.js  index.html  styles.css
tests/: conftest.py
tests/integration/: conftest.py  test_memory_manager_integration.py  test_pipeline.py  test_repositories_integration.py  test_storage.py
tests/unit/: test_ai_client_parsing.py  test_ai_client_protocol.py  test_ai_client_retry.py  test_api_auth.py  test_bait_loop.py  test_conversation_engine.py  test_decision_constraints.py  test_enrichment_async.py  test_enrichment_slice.py  test_event_handlers.py  test_feedback_loop_scoring.py  test_finalize_send_txn.py  test_gate_telemetry.py  test_memory_manager_relationships.py  test_persona_engine_embedder.py  test_queue_dlq.py  (+10 more)
web/: README.md  index.html  serve.sh
(+2 files in other folders)
