[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-ci"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.36",
    "cryptg>=0.4",
    "redis[hiredis]>=5.0,<6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "orjson>=3.10",
    "httpx>=0.28.1",
    "pgvector>=0.3",
    "sentence-transformers>=3.0",
    "vaderSentiment>=3.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "testcontainers[postgres,redis]>=4.0",
    "ruff>=0.9",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "integration: tests that require a live Postgres/Redis via testcontainers (need Docker)",
]

[tool.setuptools.packages.find]
include = ["core*", "storage*", "pipeline*", "ingestion*", "api*", "conversation_engine*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # long lines are not treated as errors
